changes in html files

--- a/src/main/resources/templates/admin/nasze_zawody_admin.html
+++ b/src/main/resources/templates/admin/nasze_zawody_admin.html
@@ -77,7 +77,7 @@
                             </td>
                             <td>
                                 <label for="liczbaBiletow"></label>
-                                <input type="text" id="liczbaBiletow" th:field="*{liczbaBiletow}" autocomplete="on" class="form-control-sm" required>
+                                <input type="text" id="liczbaBiletow" th:field="*{liczbaBiletow}" autocomplete="on" class="form-control-sm" required >
                             </td>
                             <td>
                                 <label for="zlote_medale"></label>
@@ -182,7 +182,7 @@
         <strong>Kontakt:</strong>
         <br>
         <i class="fas fa-phone"></i>
-        tel2: +48 506 215 719
+        tel: +48 506 215 719
         <br>
         <i class="fas fa-envelope"></i>
         e-mail: klub_lekkoatletyczny@gmail.com
