--- a/src/main/resources/templates/admin/zawodnicy.html
+++ b/src/main/resources/templates/admin/zawodnicy.html
@@ -220,7 +220,7 @@
               </div>
               <div class="col">
                 <label for="nrKlubu">Nr klubu</label>
-                <input class="getData" type="text" th:field="*{nrKlubu}" id="nrKlubu">
+                <input class="getData" type="text" th:field="*{nrKlubu}" id="nrKlubu" readonly>
               </div>
             </div>
           </div>
