--- a/src/main/resources/templates/admin/main_admin.html
+++ b/src/main/resources/templates/admin/main_admin.html
@@ -73,7 +73,7 @@
         <strong>Kontakt:</strong>
         <br>
         <i class="fas fa-phone"></i>
-        tel2: +48 506 215 719
+        tel: +48 506 215 719
         <br>
         <i class="fas fa-envelope"></i>
         e-mail: klub_lekkoatletyczny@gmail.com
